fix overflow

--- a/wp-content/themes/ldl/partials-scss/composantes/_error.scss
+++ b/wp-content/themes/ldl/partials-scss/composantes/_error.scss
@@ -2,7 +2,11 @@
 @use "../variables";
 @use "sass:color";
 
-body {
+.error_container {
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
   overflow: hidden;
 }
 
